--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    /> 
+    />
+    
+    
   </head>
   <body>
     <noscript>
@@ -24,7 +26,13 @@
         continue.</strong
       >
     </noscript>
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/night-owl.min.css"> 
+      <!-- <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/lioshi.min.css">  -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
