--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
     <link rel="icon" href="./Logo/egov.png" />
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title>Vue - GoC</title>
+    <title>Vue.js - GoC</title>
     <!-- install fonts and Material Design Icons -->
     <link
       rel="stylesheet"
